--- a/src/assets/challenge1/styles.module.css
+++ b/src/assets/challenge1/styles.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     display: flex;
     height: 80vh;
     width: 100%;
@@ -21,14 +21,13 @@
     height: 15rem;
     object-fit: cover;
     border-radius: 15px;
-}
-
-.card_body {
+} */
+/* .card_body {
     padding: 2rem 0 .5rem 0;
     font-family: Arial, Helvetica, sans-serif;
-}
+} */
 
-.card_body a {
+/* .card_body a {
     text-decoration: none;
 }
 
@@ -56,12 +55,20 @@
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
-}
+} */
 
 .avatar {
     margin-right: 1rem;
     width: 2rem;
     height: 2rem;
+}
+
+
+.card_header {
+    width: 100%;
+    height: 15rem;
+    object-fit: cover;
+    border-radius: 15px;
 }
 
 
