--- a/src/assets/challenge1/styles.module.css
+++ b/src/assets/challenge1/styles.module.css
@@ -72,7 +72,7 @@
 }
 
 
-@media screen and (max-width: 540px) {
+/* @media screen and (max-width: 540px) {
     .container {
         height: 100vh;
     }
@@ -91,4 +91,4 @@
         font-size: .8rem;
     }
 
-}
+} */
